--- a/app/views/incidents/create.js.erb
+++ b/app/views/incidents/create.js.erb
@@ -1,17 +1,35 @@
 // Here you generate *JavaScript* that would be executed in the browser
-function refreshForm(innerHTML) {
-  const newIncidentForm = document.getElementById('new_incident');
-  newIncidentForm.innerHTML = innerHTML;
+function replaceForm(innerHTML) {
+  const formContainer = document.getElementById('incident-declaration-container');
+  if (formContainer) {
+    formContainer.innerHTML = innerHTML;
+  }
 }
 
-function addIncident(incidentHTML) {
-  const incidents = document.getElementById('incidents');
-  incidents.insertAdjacentHTML('beforeend', incidentHTML);
-}
-
-<% if @incident.errors.any? %>
-  refreshForm('<%= j render "incidents/form", flat: @flat, incident: @incident %>');
+<% if @next_decision %>
+  replaceForm("<%= j render 'form', decision: @next_decision  %>");
+  hideSubmitAnswers();
 <% else %>
-  addIncident('<%= j render "incidents/show", incident: @incident %>');
-  refreshForm('<%= j render "incidents/form", flat: @flat, incident: Incident.new %>');
+  const form = document.getElementById('new_incident');
+  form.submit();
 <% end %>
+
+
+
+
+// function refreshForm(innerHTML) {
+//   const newIncidentForm = document.getElementById('new_incident');
+//   newIncidentForm.innerHTML = innerHTML;
+// }
+
+// function addIncident(incidentHTML) {
+//   const incidents = document.getElementById('incidents');
+//   incidents.insertAdjacentHTML('beforeend', incidentHTML);
+// }
+
+// <%# if @incident.errors.any? %>
+//   refreshForm('<%#= j render "incidents/form", flat: @flat, incident: @incident %>');
+// <%# else %>
+//   addIncident('<%#= j render "incidents/show", incident: @incident %>');
+//   refreshForm('<%#= j render "incidents/form", flat: @flat, incident: Incident.new %>');
+// <%# end %>
