--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -47,10 +47,12 @@
       <div class="container-incident">
         <h1>Déclarer votre sinistre</h1>
 
-        <%= simple_form_for Incident.new, html:{id:"dashboard_new_incident2"} do |f| %>
-        <%= f.input :answer, label: false, collection: @first_decision[:answers], label_method: lambda{ |answer| render "incident_category_card", incident_category: answer.first }, as: :radio_buttons %>
-        <%= f.submit "OK", class: "btn btn-primary d-none" %>
-        <% end %>
+        <div id="incident-declaration-container">
+          <%= simple_form_for Incident.new, html:{id:"dashboard_new_incident2"}, remote: true do |f| %>
+            <%= f.input :answer, label: false, collection: @first_decision[:answers], label_method: lambda{ |answer| render "incident_category_card", incident_category: answer.first }, as: :radio_buttons %>
+            <%= f.submit "OK", class: "btn btn-primary d-none" %>
+          <% end %>
+        </div>
 
       </div>
     </div>
