--- a/app/assets/stylesheets/pages/_incident_result.scss
+++ b/app/assets/stylesheets/pages/_incident_result.scss
@@ -145,43 +145,65 @@
     .form-check-input  {
       display: none;
     }
-    label {
+    // label {
 
-      background-color: #6ba7a8;
-      color:white;
-      margin: 10px;
-      border-radius: 3px;
-      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
-      padding: 10px;
-      cursor: pointer;
-      &:hover {
-        background-color: #357376;
-      }
-    }
+    //   background-color: #6ba7a8;
+    //   color:white;
+    //   margin: 10px;
+    //   border-radius: 3px;
+    //   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+    //   padding: 10px;
+    //   cursor: pointer;
+    //   &:hover {
+    //     background-color: #357376;
+    //   }
+    // }
     .incident_answer {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       letter-spacing: 1px;
-      font-size: 17px;
+      font-size: 15px;
     }
     legend {
-      text-align: left;
-      font-size: 1em;
+      text-align: center;
+      font-size: 20px;
       color: #357376;
     }
     .form-check {
-      flex: 0 0 200px;
+      flex: 0 0 160px;
       padding: 0;
       margin: 10px 5px;
+      background-size: cover;
+      background-position: center;
+      // width: 140px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      // font-size: 24px;
+      background-color: $hover-green;
+      transition: 0.3s background-color ease-out;
+      // font-weight: bold;
+      // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      // border-radius: 50%;
+      box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+      &:hover {
+        opacity:0.8;
+        transition: 0.3s background-color ease;
+        cursor: pointer;
+      }
       label {
-        width: 100%;
-        margin: 0;
-        height: 150px;
+        margin: 5px;
         text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      //   width: 100%;
+      //   margin: 0;
+      //   height: 150px;
+      //   text-align: center;
+      //   display: flex;
+      //   align-items: center;
+      //   justify-content: center;
       }
     }
   }
