--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-actions d-flex align-items-center justify-content-between">
-          <%= f.button :submit, "Enregistrer", class: 'btn btn-primary ml-0 text-white' %>
+          <%= f.button :submit, "Enregistrer", class: 'btn btn-info ml-0 btn-login' %>
           <span class="ml-5">  <%= render "devise/shared/links" %></span>
         </div>
       <% end %>
