--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -281,7 +281,6 @@
 
 
 // Container des cards incidents
-
 .container-incident {
   // padding: 0px;
   // margin-top: 70px;
@@ -305,6 +304,9 @@
     font-weight: bolder;
     letter-spacing: 1px;
   }
+}
+.inter {
+  margin-top: 20px;
 }
 
 .lower-right {
