--- a/app/assets/stylesheets/pages/_incident_result.scss
+++ b/app/assets/stylesheets/pages/_incident_result.scss
@@ -197,6 +197,11 @@
       label {
         margin: 5px;
         text-align: center;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       //   width: 100%;
       //   margin: 0;
       //   height: 150px;
@@ -254,17 +259,13 @@
       padding: 0;
       margin: 10px 5px;
       label {
-        width: 100%;
         margin: 0;
-        height: 150px;
-        text-align: center;
-        display: flex;
         align-items: center;
         justify-content: center;
+
       }
     }
   }
-
 }
 
 // form incidents
@@ -281,7 +282,6 @@
   }
   .incident_answer {
     display: flex;
-
     .form-check {
       flex: 1 0 1%;
       margin-right: 10px;
