--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -7,7 +7,7 @@
         <%= f.input :date , placeholder: 'Date du document', label: false, as: :string, required: false, input_html: {class: "datepicker bg-white"} %>
         <%= f.input :file, label: 'Choisir un fichier', label_html: {class: "btn btn-primary m-0 w-100", id: 'file-pick'},:input_html => { :class => 'text-white d-none m-0'}%>
         <div class="mb-4"><span id="file-upload-value" class="text-white"></span></div>
-        <%= f.submit "Valider", class: "btn btn-primary ml-0 text-white w-100" %>
+        <%= f.submit "Valider", class: "btn btn-info ml-0 w-100" %>
       <% end %>
     </div>
   </div>
