--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-        <div class="p-3 m-3"> <p class="font-italic font-weight-bold"> <i class="fas fa-check"></i> Intervention prévalidée par votre propriétaire par un prestataire validé </i></p></div>
+        <div class="p-3 m-3"> <p class="font-italic font-weight-bold"> <i class="fas fa-check"></i> Intervention prévalidée par votre propriétaire pour un prestataire validé </i></p></div>
       </div>
     </div>
     <!-- Display the list of workers -->
