--- a/app/views/workers/_card_worker.html.erb
+++ b/app/views/workers/_card_worker.html.erb
@@ -10,7 +10,7 @@
  %>
   <div class="card-worker-star">
     <div class="worker-favorite">
-      <i class="fas fa-star"></i>
+      <i class="fas fa-medal"></i>
     </div>
   </div>
   <% end %>
