Fiche Clients satisfaits

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -124,28 +124,28 @@
   <div class="row justify-content-xs-center">
     <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card mb-2 mx-auto" style="width: 18rem;">
-        <img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/F8C6/production/_103568636_gettyimages-1036307366.jpg" class="card-img-top" alt="...">
+        <img src="https://images.unsplash.com/photo-1506919258185-6078bba55d2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1115&q=80" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">65 millions de locataires gérés en 1 clic</h5>
-          <p class="card-text"> Avec Homelib j'ai enfin trouvé une solution simple et rapide pour rendre autonome mes locataires façe à leurs problèmes du quotidien</p>
+          <h5 class="card-title">Je peux me concentrer sur ce qui m'importe</h5>
+          <p class="card-text"> Avec Homelib j'ai enfin trouvé une solution simple et rapide pour gérer mes 2 appartements et permettre à mes locataires d'être plus sereins</p>
         </div>
       </div>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card mb-2 mx-auto" style="width: 18rem;">
-        <img src="https://img.aws.la-croix.com/2019/04/02/1201013023/chanteuse-Angele-dernieres-Victoires-musique_0_728_486.jpg" class="card-img-top" alt="...">
+        <img src="https://images.unsplash.com/photo-1571844307880-751c6d86f3f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2017&q=80" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Balance ton agence !</h5>
-          <p class="card-text"> Avant mon agence m'appelait toutes les semaines pour un problème avec mes apparts.. Maitenant je suis sur Homelib et mon locataire gère seul !</p>
+          <h5 class="card-title">Terminé les appels de mon agence</h5>
+          <p class="card-text"> Aujourd'hui j'ai plus besoin de passer des heures au téléphone avec des interlocuteurs différents qui ne me comprennent pas </p>
         </div>
       </div>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card mb-2 mx-auto" style="width: 18rem;">
-        <img src="https://assets.about.me/background/users/e/d/o/edouardfoussier_1521739259_661.jpg" class="card-img-top" alt="...">
+        <img src="https://images.unsplash.com/photo-1505503693641-1926193e8d57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">J'ai arrêté de me poser des questions</h5>
-          <p class="card-text">Ah !!! Homelib me permet de savoir directement si je vais devoir payer les conneries de mes potes en after ou si mon proprio est responsable !</p>
+          <p class="card-text"> Grâce à Homelib je suis sur que lorsqu'un artisan intervient, je paierais le prix juste ! C'est un confort supplémentaire pour moi et mon propriétaire</p>
         </div>
       </div>
     </div>
