--- a/app/assets/stylesheets/pages/_incident_result.scss
+++ b/app/assets/stylesheets/pages/_incident_result.scss
@@ -73,6 +73,15 @@
       margin-bottom: 10px;
       margin-left: 10px;
     }
+    .incident-certification {
+      font-size: 15px;
+      justify-content: center;
+      padding-top: 10px;
+      .fa-medal {
+        padding-right: 10px;
+        padding-bottom: 9px;
+      }
+    }
   }
   // .incident-date {
   // margin-bottom: 10px;
