--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -18,11 +18,14 @@
             </div>
             <!-- Price -->
             <div class="incident-price d-flex">
-              <i class="fas fa-money-bill-wave"></i><h4><%= @incident.tarif %><i class="fas fa-medal"></i></h4>
+              <i class="fas fa-money-bill-wave"></i><h4><%= @incident.tarif %></h4>
             </div>
             <!-- Responsability -->
             <div class="incident-responsability d-flex">
               <i class="fas fa-gavel"></i><h4><%= @incident.responsable %></h4>
+            </div>
+            <div class="incident-certification d-flex">
+              <i class="fas fa-medal"></i><p>Montant pris en charge par le propiétaire</p>
             </div>
             <!-- Summary -->
             <div class="incident-summary">
@@ -39,7 +42,6 @@
             </div>
           </div>
         </div>
-        <div class="p-3 m-3"> <p class="font-italic font-weight-bold"> <i class="fas fa-check"></i> Intervention prévalidée par votre propriétaire pour un prestataire validé </i></p></div>
       </div>
     </div>
     <!-- Display the list of workers -->
@@ -47,7 +49,7 @@
       <div class="incident-workers">
         <div class="container-fluid">
           <!-- Only Favorite Workers -->
-          <h2><i class="fas fa-medal" style="font-size:15px; padding-right:5px;"></i>Réparateurs certifiés par le propriétaire </h2>
+          <h2><i class="fas fa-medal" style="font-size:18px; padding-right:5px;"></i>Réparateurs certifiés par le propriétaire </h2>
           <ul class="">
             <% @workers_favorite.each_with_index do |worker, idx| %>
               <li>
