--- a/app/assets/stylesheets/pages/_incident_result.scss
+++ b/app/assets/stylesheets/pages/_incident_result.scss
@@ -74,9 +74,10 @@
       margin-left: 10px;
     }
     .incident-certification {
-      font-size: 15px;
+      font-size: 18px;
       justify-content: center;
       padding-top: 10px;
+      font-weight: bold;
       .fa-medal {
         padding-right: 10px;
         padding-bottom: 9px;
