--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -25,7 +25,7 @@
               <i class="fas fa-gavel"></i><h4><%= @incident.responsable %></h4>
             </div>
             <div class="incident-certification d-flex">
-              <i class="fas fa-medal"></i><p>Montant pris en charge par le propiétaire</p>
+              <i class="fas fa-medal"></i><p>Intervention directement prise en charge par le propiétaire</p>
             </div>
             <!-- Summary -->
             <div class="incident-summary">
@@ -49,7 +49,7 @@
       <div class="incident-workers">
         <div class="container-fluid">
           <!-- Only Favorite Workers -->
-          <h2><i class="fas fa-medal" style="font-size:18px; padding-right:5px;"></i>Réparateurs certifiés par le propriétaire </h2>
+          <h2><i class="fas fa-medal" style="font-size:18px; padding-right:5px;"></i>Artisans certifiés par le propriétaire </h2>
           <ul class="">
             <% @workers_favorite.each_with_index do |worker, idx| %>
               <li>
@@ -58,7 +58,7 @@
             <% end %>
           </ul>
           <!-- Only NONE favorite Workers -->
-          <h2>Autres réparateurs selectionnés par HomeLib</h2>
+          <h2>Autres artisans selectionnés par HomeLib</h2>
           <ul class="">
             <% @workers_other.each_with_index do |worker, idx| %>
               <li>
