--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Réparateurs", workers_path, class: "nav-link" %>
+          <%= link_to "Artisans", workers_path, class: "nav-link" %>
         </li>
         <% if current_user.rentals.present? %>
         <li class="nav-item">
